<?xml version="1.0" encoding="UTF-8"?>
<!--
  剧情游戏编辑器(Studio) 与 剧情游戏读取器(Player) —— 工程构建文件
  JDK 17 + JavaFX 17（纯 Java 代码构建 UI，无 FXML）
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.studio</groupId>
  <artifactId>visual-novel-studio</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>ds-adventure (Visual Novel Studio &amp; Player)</name>
  <description>剧情游戏可视化编辑器（Studio）与剧情游戏读取器（Player），基于 Java 17 + JavaFX 17</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- JavaFX 平台分类器：win / linux / mac / linux-aarch64 ... 换平台时用 -Djavafx.platform=xxx 覆盖 -->
    <javafx.version>17.0.20</javafx.version>
    <javafx.platform>win</javafx.platform>

    <!-- 默认启动类为编辑器；运行播放器： mvn -Pplayer javafx:run -->
    <fx.mainClass>com.studio.launcher.EditorApp</fx.mainClass>
  </properties>

  <dependencies>
    <!-- JavaFX 基础控件（按平台分类器引入，保证编译与运行一致） -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <!-- 音频/视频媒体支持（MediaPlayer 播放 mp3/wav 等） -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <!-- 单元测试（检查项：mvn test 通过） -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.11.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>ds-adventure</finalName>
    <plugins>
      <!-- 编译器：Java 17（需求规格 3.5；本机可用 JDK 21 编译） -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>17</release>
          <encoding>UTF-8</encoding>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:all,-options</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- JavaFX 运行插件（无 module-info 时自动以 classpath 模式启动，规避模块限制） -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>${fx.mainClass}</mainClass>
          <options>
            <!-- 通过 -Dmode 切换：player=读取器（其余默认编辑器） -->
            <option>-Dstudio.mode=studio</option>
          </options>
        </configuration>
      </plugin>

      <!-- 允许直接运行核心自测（不需要图形环境）： mvn -q exec:java -Dexec.mainClass=com.studio.parser.ParserSelfTest -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- 播放器启动配置： mvn -Pplayer javafx:run -->
    <profile>
      <id>player</id>
      <properties>
        <fx.mainClass>com.studio.launcher.PlayerApp</fx.mainClass>
      </properties>
    </profile>
  </profiles>
</project>
